# AI-Prompts-Engineering

./: .gitignore  app.py  conversation_history.json  conversational.py  pyproject.toml
Controllers/: __chat_controller.py  chat_controller.py  scrap_data_controller.py
LANGCHAIN/: chat_langchain.py
Models/: chat_model.py
RAGs/: scrapping_rag.py
static/css/: style.css
static/js/: scripts.js
templates/: chat.html
