[tool.poetry]
name = "python-ai"
version = "0.1.0"
description = ""
authors = ["Musawir Hussain <musawir.hussain@outgive.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.55.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
